--- a/proyecto/src/index.html
+++ b/proyecto/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Proyecto</title>
+  <title>LabCel</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/phone.ico">
+  <link rel="icon" type="image/x-icon" href="assets/AndroidLogo.png">
 </head>
 <body>
   <app-root></app-root>
