--- a/proyecto/src/index.html
+++ b/proyecto/src/index.html
@@ -10,5 +10,20 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
+  <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAijg0Ocs0_L6SNDoIWUj8GqtcHwEefErc",
+        authDomain: "labcel-e45e9.firebaseapp.com",
+        databaseURL: "https://labcel-e45e9.firebaseio.com",
+        projectId: "labcel-e45e9",
+        storageBucket: "labcel-e45e9.appspot.com",
+        messagingSenderId: "431182980897",
+        appId: "1:431182980897:web:ab261f7cb96cb11e"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
 </body>
 </html>
