--- a/proyecto/src/index.html
+++ b/proyecto/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
+ <!-- <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
   <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
@@ -24,6 +24,6 @@
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
-    </script>
+    </script>-->
 </body>
 </html>
