--- a/proyecto/src/index.html
+++ b/proyecto/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>LabCel</title>
   <base href="/">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/AndroidLogo.png">
 </head>
